# tap-weatherapi

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  meltano.yml  pyproject.toml
.github/workflows/: build.yml  test.yml
tap_weatherapi/: __init__.py  __main__.py  client.py  streams.py  tap.py
tests/: __init__.py  test_core.py  test_locations_file.py  test_pagination.py  test_streams.py
