[build-system]
requires = [
    "hatchling>=1.29.0,<2",
    "hatch-vcs>=0.5",
]
build-backend = "hatchling.build"

[project]
name = "tap-weatherapi"
dynamic = ["version"]
description = "Singer tap for WeatherAPI, built with the Meltano Singer SDK."
readme = "README.md"
authors = [{ name = "Edgar Ramírez-Mondragón", email = "emondragon@meltano.com" }]
keywords = [
    "ELT",
    "WeatherAPI",
]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
license = "Apache-2.0"
license-files = [ "LICENSE" ]
requires-python = ">=3.10"
dependencies = [
    "singer-sdk~=0.53.5",
    "requests~=2.33.0",
    "typing-extensions>=4.5.0; python_version < '3.13'",
]

[project.optional-dependencies]
s3 = [
    "s3fs>=2026.1.0",
]

[project.scripts]
# CLI declaration
tap-weatherapi = 'tap_weatherapi.tap:TapWeatherAPI.cli'

[dependency-groups]
dev = [
    { include-group = "cache" },
    { include-group = "test" },
    { include-group = "typing" },
]
cache = [
    "requests-cache>=1.3.1",
]
test = [
    "pytest>=9.0.3",
    "pytest-github-actions-annotate-failures>=0.3",
    "singer-sdk[testing]",
]
typing = [
    { include-group = "cache" },
    { include-group = "test" },
    "mypy>=1.19.1",
    "ty>=0.0.21",
    "types-requests",
]

[tool.hatch.version]
fallback-version = "0.1.0.dev0"
source = "vcs"

[tool.pytest]
addopts = [
    "--durations=10",
    "-ra",
    "--strict-config",
    "--strict-markers",
]
filterwarnings = [
    "error",
    "once:No records were available to test:UserWarning",
]
log_level = "INFO"
minversion = "9.0"
testpaths = [
    "tests",
]
xfail_strict = true

[tool.mypy]
enable_error_code = [
    "ignore-without-code",
    "redundant-expr",
    "truthy-bool",
]
strict = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.ty.rules]
unused-type-ignore-comment = "ignore"

[tool.ruff]
line-length = 100
required-version = ">=0.15"

[tool.ruff.lint]
future-annotations = true
ignore = [
    "COM812",  # missing-trailing-comma
]
select = ["ALL"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",  # assert statements in tests are OK
]

# This configuration can be used to customize tox environments
[tool.tox]
min_version = "4.43"
requires = [
    "tox>=4.43",
    "tox-uv",
]
env_list = [
    "typing",
    { product = [
        { prefix = "3.", start = 10 },
    ] },
]

[tool.tox.env_run_base]
runner = "uv-venv-lock-runner"
pass_env = [
    "GITHUB_*",
    "TAP_WEATHERAPI_*",
]
dependency_groups = [ "test" ]
commands = [ [ "pytest", { replace = "posargs", default = [ "tests" ], extend = true } ] ]

[tool.tox.env.typing]
dependency_groups = [ "test", "typing" ]
commands = [
    [ "mypy", { replace = "posargs", default = [ "tap_weatherapi", "tests" ], extend = true } ],
    [ "ty", "check", { replace = "posargs", default = [ "tap_weatherapi", "tests" ], extend = true } ],
]
